--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ jupyter-client==4.4.0
 jupyter-console==5.0.0
 jupyter-core==4.2.0
 lazy-object-proxy==1.2.2
+luigi==2.3.2
 MarkupSafe==0.23
 matplotlib==1.5.3
 mccabe==0.4.0
