--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ backports-abc==0.4
 colorama==0.3.7
 cycler==0.10.0
 decorator==4.0.10
+docutils==0.12
 entrypoints==0.2.2
 flake8==2.5.4
 ipykernel==4.5.0
@@ -17,7 +18,8 @@ jupyter-client==4.4.0
 jupyter-console==5.0.0
 jupyter-core==4.2.0
 lazy-object-proxy==1.2.2
-luigi==2.3.2
+lockfile==0.12.2
+luigi==2.3.3
 MarkupSafe==0.23
 matplotlib==1.5.3
 mccabe==0.4.0
@@ -25,29 +27,33 @@ mistune==0.7.3
 nbconvert==4.2.0
 nbformat==4.1.0
 notebook==4.2.3
-numpy==1.11.1
-pandas==0.18.1
+numpy==1.11.2
+pandas==0.19.0
 pep8==1.7.0
 pexpect==4.2.1
 pickleshare==0.7.4
-prompt-toolkit==1.0.7
+prompt-toolkit==1.0.8
 ptyprocess==0.5.1
 pyflakes==1.0.0
 Pygments==2.1.3
 pylint==1.5.5
-pyparsing==2.1.9
+pyparsing==2.1.10
+python-daemon==2.1.1
 python-dateutil==2.5.3
-pytz==2016.6.1
-pyzmq==15.4.0
+pytz==2016.7
+pyzmq==16.0.0
 qtconsole==4.2.1
-scikit-learn==0.17.1
+requests==2.11.1
+scikit-learn==0.18
 scipy==0.18.1
+seaborn==0.7.1
 simplegeneric==0.8.1
 six==1.10.0
 sklearn==0.0
 terminado==0.6
-tornado==4.4.1
-traitlets==4.3.0
+tornado==4.4.2
+tqdm==4.8.4
+traitlets==4.3.1
 wcwidth==0.1.7
 widgetsnbextension==1.2.6
 wrapt==1.10.8
